methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:13: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime20.FlowerCase'
 override def run() {
              ^