methods.flowerpot.FlowerCase.scala.code
def growFlowers() {
  Flowers(Color.RED)
  for(b<-1 to 4) { avance()}
  Flowers (Color.CYAN)
  gauche(); for(b<-1 to 4) { recule()} ; droite();
  Flowers (Color.GREEN)
  gauche();gauche();for(b<-1 to 2) { avance();droite();avance();gauche};droite();droite();
  Flowers(Color.ORANGE)
  for(b<-1 to 2) { recule();gauche();recule();droite()}
  Flowers(Color.PINK)
}

 override def run() {
   growFlowers()
   for (c<-1 to 2) {avance();avance();avance();gauche();droite()}
   Flowers(Color.BLUE)
   for(b<-1 to 2) { avance();gauche();avance();droite()}
   growFlowers()
   droite();avance();droite();for (v<- 1 to 9)
   droite();avance();avance();droite()
   growFlowers()
   for (c<-1 to 2) {avance();avance();avance();gauche();droite()}
   Flowers(Color.BLUE)
   for(b<-1 to 2) { avance();gauche();avance();droite()}
   growFlowers()
 }


def Flowers(c:Color) {
  for (a<- 1 to 4) {
    marquer(c);
    avance();
    marquer(Color.YELLOW)
    gauche();
    avance();
    droite();
    droite()
  }
}

def marquer(c:Color)  {
  setCouleurBrosse(c);
  baisseBrosse();leveBrosse();
}